--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,10 @@ dependencies {
     // RxJava + RxAndroid
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
+    //kotlin coroutine
+    final def coroutineVer = "1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutineVer"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+
 }
